--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+:root{
+  --grey: #2a2a2a;
+  --light_grey: #7a7a7a;
+}
 
 * {
   padding: 0;
@@ -160,4 +165,83 @@ h6 {
 
 .main__desc {
   margin-top: 50px;
+  font-size: 20px;
+  color: #fff;
+  font-size: 19px;
+  max-width: 800px;
+  text-align: center;
+  line-height: 30px;
+  letter-spacing: 0.8px;
+}
+
+/*********************/
+.block__place {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.place__image__container {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.place__image__container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.place__desc {
+  width: 50%;
+  background-color: #fff;
+  height: 100%;
+}
+.place__desc__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.place__grape {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.place__grape img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.place__name-desc {
+  margin-top: 20px;
+  color: var(--grey);
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.place__name-desc2 {
+  margin-top: 30px;
+  color: var(--grey);
+  font-family: "Crimson Text", serif;
+  font-size: 18.5px;
+}
+.place__text {
+  margin-top: 30px;
+  color: var(--light_grey);
+  font-family: "Crimson Text", serif;
+  font-size: 15px;
+  max-width: 490px;
+  text-align: center;
+  line-height: 25px;
+}
+.place__signature {
+  margin-top: 30px;
 }
