--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -176,8 +176,9 @@ h6 {
 
 /*********************/
 .block__place {
+
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -244,4 +245,28 @@ h6 {
 }
 .place__signature {
   margin-top: 30px;
+}
+/*******************/
+.block__essentials{
+
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  height: 100vh;
+}
+.place__name-desc2-2{
+  max-width: 300px;
+  font-style: italic;
+  text-align: center;
+  font-size: 21px;
+  font-weight: 600;
+  line-height: 28px;
+}
+.place__grape2{
+  width: 120px;
+}
+.place__grape2 img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
