--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -224,7 +224,7 @@ h6 {
 .place__name-desc {
   margin-top: 20px;
   color: var(--grey);
-  font-size: 28px;
+  font-size: 30px;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -269,4 +269,54 @@ h6 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+/*************************/
+.block__wine-map{
+  
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.wine__map__container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.wine__map__element{
+  width: 48.2%;
+  height: 47.2%;
+  background-color: #7a7a7a1c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wine__map__element img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.wine__map__element:nth-child(2){
+
+
+}
+
+
+
+
+
+.place__grape3{
+
+}
+.place__grape3 img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+
+}
+.place__name-desc2-3{
+  font-weight: 600;
 }
