--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -4,6 +4,7 @@
 :root{
   --grey: #2a2a2a;
   --light_grey: #7a7a7a;
+  --brown: #EFA758;
 }
 
 * {
@@ -319,4 +320,25 @@ h6 {
 }
 .place__name-desc2-3{
   font-weight: 600;
+}
+.wine__map__button{
+  width: 150px;
+  margin-top: 30px;
+}
+.wine__map__button a {
+  width: 100%  ;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wine__map__button img {
+  width: 30px;
+  height: 25px;
+}
+.wine__map__button p{
+  color: var(--brown);
+  font-size: 13px;
+  text-transform: uppercase;
+  margin-top: 15px;
 }
