--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -100,6 +100,21 @@ h6 {
   font-size: inherit;
   font-weight: 400;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
+
+
+
 
 .main__wrapper {
   width: 100%;
@@ -473,4 +488,131 @@ h6 {
   margin-top: 5px;
 }
 .contact__map {
+  margin-top: 30px;
+  width: 80%;
+  height: 350px;
+}
+.contact__map iframe{
+  width: 100%;
+  height: 100%;
+
+}
+
+/*******************/
+.block__social {
+  width: 100%;
+  height: 850px;
+  background-color: #2a2a2a;
+}
+.social__container {
+  width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.social__logo {
+  margin-top: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.social__logo img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.social__since {
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #fff;
+  
+}
+.social__name {
+  font-size: 50px;
+  margin-top: 25px;
+  color: #fff;
+  font-weight: 600;
+}
+.social__line {
+  width: 1px;
+  height: 73px;
+  background-color: var(--light_grey);
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.social__networks {
+  display: flex;
+  align-items: center;
+}
+.social__element {
+  height: 60px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0px 8px;
+}
+
+.social__element__border{
+  height: 40px;
+  width: 40px;
+  border: var(--light_grey) 1px solid;
+  transform: rotate(45deg);
+}
+.social__element__logo{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--light_grey);
+  transform: rotate(-45deg);
+}
+.social__element__logo i {
+  font-size: 22px;
+}
+
+
+.socail__allrights {
+  margin-top: 50px;
+  color: var(--light_grey);
+  font-size: 16px;
+}
+
+.social__pages {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+.social__page {
+  display: block;
+  color: #fff;
+  font-size: 11px;
+  font-weight: 600;
+
+}
+.social__pages__line {
+  height: 9px;
+  width: 0.8px;
+  background-color: var(--light_grey);
+  margin: 0px 25px;
+}
+.social__created__by {
+
+  margin-top: 30px;
+
+}
+.social__created__by a {
+  display: flex;
+  align-items: center;
+}
+
+.social__created__by p {
+  color: var(--light_grey);
+  margin-right: 9px;
+}
+.social__created__by img {
+  transform: scale(0.7);
 }
