--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -616,3 +616,38 @@ body {
 .social__created__by img {
   transform: scale(0.7);
 }
+
+/*************MENU STYLES*************/
+.menu_wrapper {
+  max-width: 420px;
+  margin: 0 auto;
+}
+.menu__container {
+  width: 100%;
+}
+.menu__image {
+  width: 100%;
+  height: 140px;
+  overflow: hidden;
+  position: relative;
+}
+.menu__image__back {
+  width: 100%;
+  height: 100%;
+}
+.menu__image__logo {
+}
+.menu__image__name {
+}
+.menu__elements_container {
+}
+.menu__element__block {
+}
+.menu__element__name {
+}
+.menu__sub-element {
+}
+.sub-element__name {
+}
+.sub-element__price {
+}
