--- a/innvino/public/admin/style.css
+++ b/innvino/public/admin/style.css
@@ -1,3 +1,8 @@
+:root{
+    --grey: #2a2a2a;
+    --light_grey: #7a7a7a;
+    --brown: #EFA758;
+  }
 .admin__wrapper {
     height: 100vh;
     width: 100%;
@@ -143,4 +148,5 @@
     border-radius: 30px;
 
 }
+/****************ADMIN PANEL*************************/
 
