--- a/innvino/public/admin/style.css
+++ b/innvino/public/admin/style.css
@@ -150,3 +150,71 @@
 }
 /****************ADMIN PANEL*************************/
 
+.admin__panel__wrapper {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+}
+.admin__panel__navigation {
+    width: 20%;
+    background-color: var(--brown);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+}
+.panel__navigation__logo {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+}
+.panel__navigation__logo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.panel__navigation__name {
+    font-size: 30px;
+    margin-top: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--grey);
+    
+}
+.panel__navigation__elements {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+.panel__navigation__elements a {
+    margin-top: 20px;
+    font-size: 20px;
+    color: #fff;
+}
+.panel__navigation__elements a:hover{
+    color: var(--grey);
+    font-weight: 600;
+}
+.panel__navigation__logout {
+    margin-top: 50px;
+
+}
+.panel__navigation__logout button{
+    color: #fff;
+    font-size: 20px;
+    background-color: var(--grey);
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+}
+.admin__panel__content {
+}
+.panel__content__wrapper {
+}
