--- a/innvino/public/admin/style.css
+++ b/innvino/public/admin/style.css
@@ -214,6 +214,12 @@
     justify-content: center;
     border-radius: 25px;
 }
+.panel__navigation__line{
+    margin-top: 8px;
+    width: 20%;
+    height: 0.5px;
+    background-color: #7a7a7a62;
+}
 .admin__panel__content {
 }
 .panel__content__wrapper {
