--- a/innvino/public/style/style.css
+++ b/innvino/public/style/style.css
@@ -625,147 +625,57 @@ body {
 .menu__container {
   width: 100%;
 }
-.menu__image {
+.menu__navigation{
   width: 100%;
-  height: 140px;
+  height: 60px;
 
-  position: relative;
+border-bottom: 1px solid #e5e5e5;
+
 }
-.menu__image__back {
+.menu__food-container{
   width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 200;
+  min-height: 100vh;
+  padding: 0px 16px;
 }
-.menu__image__back img {
+.food__tabulator{
   width: 100%;
-  height: 100%;
-  object-fit: cover ;
-}
-.menu__image__logo {
-  width: 100%;
-  height: 100%;
-  z-index: 300;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.menu__image__logo img{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-.menu__image__name {
-}
+  overflow-x: scroll;
 
-.menu__burger{
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  z-index: 300;
-  background-color: #fff;
-  right: 20px;
-  top: 20px;
 }
-
-
-
-
-.burger-menu {
-  position: relative;
-}
-
-.burger-icon {
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.line {
-  width: 100%;
-  height: 4px;
-  background-color: black;
-  margin: 5px 0;
-  transition: all 0.3s ease;
-}
-
-.nav {
-  display: none;
-  position: absolute;
-  top: 40px;
-  right: -20px;
-  background-color: white;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-  width: 100vw;
-  height: 90vh;
-}
-
-.nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav ul li {
-  padding: 10px 20px;
-  border-bottom: 1px solid #ddd;
-}
-
-.nav ul li a {
-  text-decoration: none;
-  color: black;
-  display: block;
-}
-
-.nav ul li a:hover {
-  background-color: #f4f4f4;
-}
-
-.burger-icon.open .line:nth-child(1) {
-  transform: rotate(45deg) translate(12px, 5px);
-}
-
-.burger-icon.open .line:nth-child(2) {
-  opacity: 0;
-}
-
-.burger-icon.open .line:nth-child(3) {
-  transform: rotate(-45deg) translate(13px, -5px);
-}
-
-.nav.open {
-  display: block;
+.food__tabulator button {
   
 }
-
-
-
-
-
-
-
-
-
-
-
-
-.menu__elements_container {
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
 }
-.menu__element__block {
+
+.tab button.active {
+  background-color: var(--brown);
 }
-.menu__element__name {
+
+
+
+
+
+
+/* Style the buttons inside the tab */
+.tab button {
+  cursor: pointer;
+  padding: 12px 24px;
+  transition: 0.3s;
+  font-size: 17px;
+  border-radius: 17px;
+  margin: 0px 6px;
 }
-.menu__sub-element {
+.tab button:nth-child(1){
+  margin-left: 0;
 }
-.sub-element__name {
-}
-.sub-element__price {
+
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
 }
